--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@nextui-org/react": "2.4.1",
+		"@nextui-org/shared-icons": "^2.0.8",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
